--- a/html/giaoDienChinh.html
+++ b/html/giaoDienChinh.html
@@ -6,98 +6,157 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/giaoDienChinh.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Nhom 07</title>
 </head>
 
 <body>
-    <div class="header">
-        <div class="menuChinh">
-            <div class="container_item_MenuChinh">
-                <div><a id="item_MenuChinh" href="#"><b>Trang chủ</b> </a></div>
-                <div><a id="item_MenuChinh" href="#"><b>Giới thiệu</b> </a></div>
-                <div><a id="item_MenuChinh" href="#"><b>Liên hệ</b></a></div>
-                <div><a id="item_MenuChinh" href="#"><b>Đăng Kí</b></a></div>
-                <div><a id="item_MenuChinh" href="#"><b>Đăng nhập</b></a></div>
-                <div class="gioHang">
-                    <a id="item_MenuChinh" href="#">
-                        <img src="../images/gioHang.png" alt="" id="btn-gioHang">
-                    </a>
-
+    <div class="container-header">
+        <!-- header -->
+        <div class="header">
+            <div class="menuChinh">
+                <div class="container_item_MenuChinh">
+                    <div><a id="item_MenuChinh" href="#"><b>Trang chủ</b> </a></div>
+                    <div><a id="item_MenuChinh" href="#"><b>Giới thiệu</b> </a></div>
+                    <div><a id="item_MenuChinh" href="#"><b>Liên hệ</b></a></div>
+                    <div><a id="item_MenuChinh" href="#"><b>Đăng Kí</b></a></div>
+                    <div><a id="item_MenuChinh" href="#"><b>Đăng nhập</b></a></div>
+                    <div class="gioHang">
+                        <p>Giỏ hàng</p>
+                        <a id="item_MenuChinh" href="#">
+                            <img src="../images/gioHang.png" alt="" id="btn-gioHang">
+                        </a>
+                    </div>
                 </div>
             </div>
+            <div class=" under-header">
+                <div class="logo">
+                    logo
+                </div>
+                <div class="search">
+                    <input type="text" placeholder="Tên sản phẩm">
+                    <button type="submit" value="Tìm kiếm">Tìm kiếm</button>
+                </div>
+                <div class="Hotline-header">Hotline:19002812</div>
+            </div>
         </div>
-        <div class=" under-header">
-            <div class="logo">
-                logo
+        <!-- menu 1 -->
+        <div>
+            <div class="menu-1-container">
+                <ul class="menu-1" type="none">
+                    <li class="phongKhach">
+                        <a href="#" class="item-menu-1">Phòng Khách</a>
+                        <i></i>
+                        <div>
+                            <ul class="submenu-phongKhach" type="none">
+                                <li class="submenu-phongKhach submenu-item-1">
+                                    <a href="#" class="menu-item">Sofa gỗ phòng khách</a>
+                                </li>
+                                <li class="submenu-phongKhach submenu-item-1">
+                                    <a href="#" class="menu-item">Kệ tivi</a>
+                                </li>
+                                <li class="submenu-phongKhach submenu-item-1">
+                                    <a href="#" class="menu-item">Bàn nước</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="phongNgu">
+                        <a href="#" class="item-menu-1">Phòng Ngủ</a>
+                        <div>
+                            <ul class="submenu-phongNgu" type="none">
+                                <li class="submenu-phongNgu submenu-item-1">
+                                    <a href="#" class="menu-item">Giường</a>
+                                </li>
+                                <li class="submenu-phongNgu submenu-item-1">
+                                    <a href="#" class="menu-item">Tủ quần áo</a>
+                                </li>
+                                <li class="submenu-phongNgu submenu-item-1">
+                                    <a href="#" class="menu-item">Bàn phấn</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="phongBep">
+                        <a href="#" class="item-menu-1">Phòng Bếp</a>
+                        <div>
+                            <ul class="submenu-phongBep" type="none">
+                                <li class="submenu-phongBep submenu-item-1">
+                                    <a href="#" class="menu-item">Bàn ăn</a>
+                                </li>
+                                <li class="submenu-phongBep submenu-item-1">
+                                    <a href="#" class="menu-item">Ghế bàn ăn</a>
+                                </li>
+                                <li class="submenu-phongBep submenu-item-1">
+                                    <a href="#" class="menu-item">Tủ bếp</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="phongKhach">
+                        <a href="#" class="item-menu-1">Dự án tiêu biểu</a>
+                    </li>
+                    <li class="phongKhach">
+                        <a href="#" class="item-menu-1">Tin tức</a>
+                    </li>
+                </ul>
             </div>
-            <div class="search">
-                <input type="text" placeholder="Tên sản phẩm">
-                <button type="submit" value="Tìm kiếm">Tìm kiếm</button>
-            </div>
-            <div class="Hotline-header">Hotline:19002812</div>
         </div>
     </div>
-    <div>
-        <div class="menu-1-container">
-            <ul class="menu-1" type="none">
-                <li class="phongKhach">
-                    <a href="#" class="item-menu-1">Phòng Khách</a>
-                    <div>
-                        <ul class="submenu-phongKhach" type="none">
-                            <li class="submenu-phongKhach submenu-item-1">
-                                <a href="#" class="menu-item">Sofa gỗ phòng khách</a>
-                            </li>
-                            <li class="submenu-phongKhach submenu-item-1">
-                                <a href="#" class="menu-item">Kệ tivi</a>
-                            </li>
-                            <li class="submenu-phongKhach submenu-item-1">
-                                <a href="#" class="menu-item">Bàn nước</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="phongNgu">
-                    <a href="#" class="item-menu-1">Phòng Ngủ</a>
-                    <div>
-                        <ul class="submenu-phongNgu" type="none">
-                            <li class="submenu-phongNgu submenu-item-1">
-                                <a href="#" class="menu-item">Giường</a>
-                            </li>
-                            <li class="submenu-phongNgu submenu-item-1">
-                                <a href="#" class="menu-item">Tủ quần áo</a>
-                            </li>
-                            <li class="submenu-phongNgu submenu-item-1">
-                                <a href="#" class="menu-item">Bàn phấn</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="phongBep">
-                    <a href="#" class="item-menu-1">Phòng Bếp</a>
-                    <div>
-                        <ul class="submenu-phongBep" type="none">
-                            <li class="submenu-phongBep submenu-item-1">
-                                <a href="#" class="menu-item">Bàn ăn</a>
-                            </li>
-                            <li class="submenu-phongBep submenu-item-1">
-                                <a href="#" class="menu-item">Ghế bàn ăn</a>
-                            </li>
-                            <li class="submenu-phongBep submenu-item-1">
-                                <a href="#" class="menu-item">Tủ bếp</a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="phongKhach">
-                    <a href="#" class="item-menu-1">Dự án tiêu biểu</a>
-                </li>
-                <li class="phongKhach">
-                    <a href="#" class="item-menu-1">Tin tức</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <!-- carousel -->
+    <div class="carousel slide" data-ride="carousel" id="myCarousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="../images/img_carousel.jpg" alt="Los Angeles" style="width:100%; height:377px">
+            </div>
 
+            <div class="item">
+                <img src="../images/img_carousel_1.jpg" alt="Chicago" style="width:100%; height:377px">
+            </div>
+
+            <div class="item">
+                <img src="../images/img_carousel_2.jpg" alt="New york" style="width:100%; height:377px">
+            </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- caption sản phẩm -->
+    <div id="tab-caption">
+        <div id="tab-cap-1" class="tab-caption-item">
+            <p class="sanPhamKhuyenMai">
+                <span class="text">Sản phẩm khuyến mãi</span>
+            </p>
+        </div>
+        <div id="tab-cap-2" class="tab-caption-item ">
+            <p class="sanPhamMoi">
+                <span class="text ">Sản phẩm mới</span>
+            </p>
+        </div>
+        <div id="tab-cap-3 " class="tab-caption-item ">
+            <p class="sanPhamHot ">
+                <span class="text ">Sản phẩm hot</span>
+            </p>
+        </div>
+        <div id="tab-cap-4 " class="tab-caption-item ">
+            <p class="sanPhamBanChay ">
+                <span class="text ">Sản phẩm bán chạy</span>
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
