--- a/html/giaoDienChinh.html
+++ b/html/giaoDienChinh.html
@@ -7,23 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/giaoDienChinh.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Nhom 07</title>
+    <title>Trang Chủ</title>
 </head>
 
 <body>
-    <div class="container-header">
+    <div class="con-md-12">
         <!-- header -->
-        <div class="header">
+        <header>
             <div class="menuChinh">
                 <div class="container_item_MenuChinh">
                     <div><a id="item_MenuChinh" href="#"><b>Trang chủ</b> </a></div>
                     <div><a id="item_MenuChinh" href="#"><b>Giới thiệu</b> </a></div>
                     <div><a id="item_MenuChinh" href="#"><b>Liên hệ</b></a></div>
                     <div><a id="item_MenuChinh" href="#"><b>Đăng Kí</b></a></div>
-                    <div><a id="item_MenuChinh" href="#"><b>Đăng nhập</b></a></div>
+                    <div><a id="item_MenuChinh" href="#" data-toggle="modal" data-target="#logInModal"><b>Đăng nhập</b></a></div>
                     <div class="gioHang">
                         <a id="item_MenuChinh" href="#">
                             <p>Giỏ hàng</p>
@@ -34,7 +35,7 @@
             </div>
             <div class=" under-header">
                 <div class="logo">
-                    logo
+                    <img src="../images/logo.png" alt="" width="160px" height="70px">
                 </div>
                 <div class="search">
                     <input type="text" placeholder="Tên sản phẩm">
@@ -42,7 +43,7 @@
                 </div>
                 <div class="Hotline-header">Hotline:19002812</div>
             </div>
-        </div>
+        </header>
     </div>
     <!-- menu 1 -->
     <div class="menu-1-container">
@@ -136,7 +137,7 @@
         </a>
     </div>
     <!--  sản phẩm mới-->
-    <div class="SanPhamMoi">
+    <div class="col-md-12" style="margin:auto">
         <div id="tieuDeSPMoi">
             <div id="container-tieude">
                 <div id="tieude">Sản phẩm khuyến mãi</div>
@@ -145,30 +146,30 @@
                 <div id="tieude">Sản phẩm bán chạy</div>
             </div>
         </div>
-        <div id="hinhanhSPMoi">
+        <div id="hinhanhSPMoi" class="col-md-10" style="margin:auto">
             <div id="SPMoi">
-                <a href="#">
+                <a href="../html/datHang.html">
                     <img src="../images/spmoi_1.jpg" alt="" width="240px" height="240px">
                     <div id="tenSPMoi">Giường ngủ gỗ đẹp</div>
                 </a>
                 <div id="giaSPMoi">15,999,000 VNĐ</div>
             </div>
             <div id="SPMoi">
-                <a href="#">
+                <a href="../html/datHang.html">
                     <img src="../images/spmoi_2.jpg" alt="" width="240px" height="240px">
                     <div id="tenSPMoi">Giường gỗ đẹp</div>
                 </a>
                 <div id="giaSPMoi">16,999,000 VNĐ</div>
             </div>
             <div id="SPMoi">
-                <a href="#">
+                <a href="../html/datHang.html">
                     <img src="../images/spmoi_3.jpg" alt="" width="240px" height="240px">
                     <div id="tenSPMoi">Tủ bếp gỗ tự nhiên</div>
                 </a>
                 <div id="giaSPMoi">18,000,000 VNĐ</div>
             </div>
             <div id="SPMoi">
-                <a href="">
+                <a href="../html/datHang.html">
                     <img src="../images/spmoi_4.jpg" alt="" width="240px" height="240px">
                     <div id="tenSPMoi">Bàn ăn gỗ tự nhiên</div>
                 </a>
@@ -177,7 +178,7 @@
         </div>
     </div>
     <!-- sản phẩm phòng khách -->
-    <div class="container" id="sanphamPhongKhach">
+    <div class="col-md-10" id="sanphamPhongKhach" style="margin:auto; margin-top:20px">
         <div id="tieudePhongKhach">
             <div id="ten">PHÒNG KHÁCH</div>
             <div id="loaiSP">
@@ -189,28 +190,28 @@
         <div id="hinhanhSPPhongKhach">
             <div id="SPPhongKhach-top">
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_1.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">BÀN TRÀ GỖ ĐẸP 1</div>
                     </a>
                     <div id="giaSPPhongKhach">Liên hệ</div>
                 </div>
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_2.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">BÀN TRÀ GỖ ĐẸP 2</div>
                     </a>
                     <div id="giaSPPhongKhach">Liên hệ</div>
                 </div>
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_3.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">BÀN TRÀ MẶT GỖ</div>
                     </a>
                     <div id="giaSPPhongKhach">Liên hệ</div>
                 </div>
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_4.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">BÀN TRÀ GỖ PHÒNG KHÁCH</div>
                     </a>
@@ -219,28 +220,28 @@
             </div>
             <div id="SPPhongKhach-bottom">
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_5.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">BÀN TRÀ GỖ HIỆN ĐẠI 1</div>
                     </a>
                     <div id="giaSPPhongKhach">Liên hệ</div>
                 </div>
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_6.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">BÀN TRÀ ĐẸP </div>
                     </a>
                     <div id="giaSPPhongKhach">Liên hệ</div>
                 </div>
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_7.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">BÀN TRÀ GỖ HIỆN ĐẠI 2</div>
                     </a>
                     <div id="giaSPPhongKhach">Liên hệ</div>
                 </div>
                 <div id="SPPhongKhach">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongkhach_8.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongKhach">KỆ TI VI GỖ PHÒNG KHÁCH</div>
                     </a>
@@ -250,7 +251,7 @@
         </div>
     </div>
     <!-- sản phẩm phòng ngủ -->
-    <div class="container" id="sanphamPhongNgu">
+    <div class="col-md-10" id="sanphamPhongNgu" style="margin:auto; margin-top:20px">
         <div id="tieudePhongNgu">
             <div id="ten">PHÒNG NGỦ</div>
             <div id="loaiSP">
@@ -262,28 +263,28 @@
         <div id="hinhanhSPPhongNgu">
             <div id="SPPhongNgu-top">
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_1.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">BÀN PHẤN ĐẸP</div>
                     </a>
                     <div id="giaSPPhongngu">Liên hệ</div>
                 </div>
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_2.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">BÀN PHẤN GỖ ĐẸP</div>
                     </a>
                     <div id="giaSPPhongngu">Liên hệ</div>
                 </div>
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_3.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">TỦ ÁO GỖ</div>
                     </a>
                     <div id="giaSPPhongngu">Liên hệ</div>
                 </div>
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_4.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">TỦ ÁO CAO CẤP</div>
                     </a>
@@ -292,28 +293,28 @@
             </div>
             <div id="SPPhongngu-bottom">
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_5.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">TỦ ÁO GÓC L</div>
                     </a>
                     <div id="giaSPPhongngu">Liên hệ</div>
                 </div>
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_6.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">TỬ QUẦN ÁO ĐẸP</div>
                     </a>
                     <div id="giaSPPhongngu">Liên hệ</div>
                 </div>
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_7.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">TỦ ĐẸP HIỆN ĐẠI</div>
                     </a>
                     <div id="giaSPPhongngu">Liên hệ</div>
                 </div>
                 <div id="SPPhongngu">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongngu_8.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongngu">TỦ QUẦN ÁO CAO CẤP</div>
                     </a>
@@ -323,7 +324,7 @@
         </div>
     </div>
     <!-- Sản phẩm phòng bếp -->
-    <div class="container" id="sanphamPhongBep">
+    <div class="col-md-10" id="sanphamPhongBep" style="margin:auto; margin-top:20px">
         <div id="tieudePhongBep">
             <div id="ten">PHÒNG BẾP</div>
             <div id="loaiSP">
@@ -342,21 +343,21 @@
                     <div id="giaSPPhongBep">6,500,000VNĐ</div>
                 </div>
                 <div id="SPPhongBep">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongbep_2.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongBep">Ghế bàn ăn đệm đen chân gỗ</div>
                     </a>
                     <div id="giaSPPhongBep">8,500,000VNĐ</div>
                 </div>
                 <div id="SPPhongBep">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongbep_3.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongBep">Ghế bàn ăn đệm da đen</div>
                     </a>
                     <div id="giaSPPhongBep">9,000,000VNĐ</div>
                 </div>
                 <div id="SPPhongBep">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongbep_4.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongBep">Ghế bàn ăn gỗ tự nhiên đẹp B95</div>
                     </a>
@@ -365,28 +366,28 @@
             </div>
             <div id="SPPhongBep-bottom">
                 <div id="SPPhongBep">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongbep_5.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongBep">Ghế gỗ bàn ăn cổ điển, sang trọng</div>
                     </a>
                     <div id="giaSPPhongBep">5,600,000VNĐ</div>
                 </div>
                 <div id="SPPhongBep">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongbep_6.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongBep">Ghế bàn ăn 4 ghế cho gia đình nhỏ</div>
                     </a>
                     <div id="giaSPPhongBep">6,500,000VNĐ</div>
                 </div>
                 <div id="SPPhongBep">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongbep_7.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongBep">Ghế bàn ăn sang trọng cho gia đình</div>
                     </a>
                     <div id="giaSPPhongBep">5,500,000VNĐ</div>
                 </div>
                 <div id="SPPhongBep">
-                    <a href="#">
+                    <a href="../html/datHang.html">
                         <img src="../images/phongbep_8.jpg" alt="" width="240px" height="240px">
                         <div id="tenSPPhongBep">Ghế bàn ăn 6 ghế cho gia đình</div>
                     </a>
@@ -395,7 +396,7 @@
             </div>
         </div>
         <!-- dự án tiêu biểu -->
-        <div class="container" id="duantieubieu">
+        <div class="col-md-10" id="duantieubieu" style="margin:auto; margin-top:20px">
             <div id="tieudeduan">DỰ ÁN TIÊU BIỂU</div>
             <div id="duan">
                 <div id="duan-1">
@@ -409,7 +410,7 @@
             </div>
         </div>
         <!-- tin tức -->
-        <div class="container" id="tintuc">
+        <div class="col-md-10" id="tintuc" style="margin:auto; margin-top:20px">
             <div id="tieudetintuc">TIN TỨC</div>
             <div id="noidungtintuc">
                 <div id="tintuc-1">
@@ -422,10 +423,59 @@
                 </div>
             </div>
         </div>
-        <!-- footer -->
-        <div class="footer">
-
+    </div>
+    <!-- footer -->
+    <footer class="col-md-12" style="background-color:#5d2a2e;color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 18px; margin-top: 20px">
+        <div class="col-md-12" style="margin-top:20px">
+            <b>
+            <p>Nhóm 07</p>
+            <p>Hotline: 19002812</p>
+            <p>Email: nhom07@gmail.com</p>
+            <p>Địa chỉ: 12 Nguyễn Văn Bảo - Phường 4 - Quận Gò Vấp - TP.HCM</p>
+            <div class="list-icon" style="font-size: 30px; border-radius: 1px solid;">
+                <i class="fa fa-facebook-official"></i>
+                <i class="fa fa-instagram"></i>
+                <i class="fa fa-google"></i>
+                <i class="fa fa-twitter"></i>
+            </div>
+            <p>Copyright 2023 © Thiết kế Website bởi: Nhóm 07</p>
+            <br>
+        </b>
         </div>
+    </footer>
+    <div class="modal fade" id="logInModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 style="text-align: center;">Đăng nhập</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form role="form" class="form-horizontal">
+                        <div class="form-group">
+                            <div id="thongbao" class="text-danger" style="text-align: center;"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="txtUserName" class="control-label col-xs-3">UserName</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" id="txtUserName" placeholder="UserNamme">
+                                <span id="tbUserName" class="text-danger">*</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="txtPass" class="control-label col-xs-3">PassWord</label>
+                            <div class="col-md-9">
+                                <input type="password" class="form-control" id="txtPass" placeholder="PassWord">
+                                <span id="tbPass" class="text-danger">*</span>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-success btn-lg btn-block" id="btnDangNhap">Đăng nhập </button>
+                    </form>
+                    <div class="modal-footer"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
