update gion hang va thanh toan

--- a/html/Thanhtoan.html
+++ b/html/Thanhtoan.html
@@ -109,16 +109,16 @@
         <div class="Store">
             <h3>Giỏ hàng()</h3>
             <div class="store-content">
-                <img src="*" alt="img">
+                <img src="../images/spmoi_1.jpg" alt="img" style="width: 8rem; height: 8rem;">
                 <div class="goods-tilte">
-                    <h4>title</h4>
-                    <p>Mã sản phẩm: </p>
-                    <p>Tình trạng: </p>
+                    <h4 class="h5">GƯỜNG NGỦ GỖ ĐẸP GN14</h4>
+                    <p>Mã sản phẩm: GN14</p>
+                    <p>Tình trạng: còn hàng</p>
                     <input type="submit" value="xoá">
                 </div>
                 <div class="goods-number">
-                    <p class="num1">giá đã giảm: </p>
-                    <p>số lượng: </p>
+                    <p class="num1">giá đã giảm: 15.999.000 VNĐ</p>
+                    <p>số lượng: 1</p>
                 </div>
             </div>
             <button>TIẾP TỤC MUA HÀNG</button>
@@ -132,9 +132,9 @@
                     <input type="text" placeholder="Mã giảm giá">
                     <button>SỬ DỤNG</button>
                 </div>
-                <p>TẠM TÍNH</p>
-                <p>PHÍ VẬN CHUYỂN</p>
-                <p>THÀNH TIỀN</p>
+                <p>TẠM TÍNH: 15.999.000 VNĐ</p>
+                <p>PHÍ VẬN CHUYỂN: 30.000 VNĐ</p>
+                <p>THÀNH TIỀN: 15.999.000 VNĐ</p>
                 <button class="pay">THANH TOÁN</button>
             </div>
         </div>
@@ -198,7 +198,24 @@
         </div>
     </div>
    </section>
-
+   <footer class="col-md-12" style="background-color:#5d2a2e;color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 18px; margin-top: 20px">
+    <div class="col-md-12" style="margin-top:20px">
+        <b>
+        <p>Nhóm 07</p>
+        <p>Hotline: 19002812</p>
+        <p>Email: nhom07@gmail.com</p>
+        <p>Địa chỉ: 12 Nguyễn Văn Bảo - Phường 4 - Quận Gò Vấp - TP.HCM</p>
+        <div class="list-icon" style="font-size: 30px; border-radius: 1px solid;">
+            <i class="fa fa-facebook-official"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-google"></i>
+            <i class="fa fa-twitter"></i>
+        </div>
+        <p>Copyright 2023 © Thiết kế Website bởi: Nhóm 07</p>
+        <br>
+    </b>
+    </div>
+</footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
