--- a/html/Giohang.html
+++ b/html/Giohang.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/datHang.css">
-    <title>Đặt Hàng</title>
+    <title>Giỏ Hàng</title>
 </head>
 <body>
     <section class="header-container">
@@ -113,13 +113,75 @@
                 <p>Giỏ Hàng</p>
             </div>
             <div class="main-content">
-                <p>không có sản phẩm nào trong giỏ hàng. Quay lại <a href="*">Cửa hàng</a> để tiếp tục mua sắm</p>
+                <h3>Giỏ hàng</h3>
+                <table class="table table-bordered">
+                    <tr class="text-center">
+                        <th style="width: 15rem;">Sản phẩm</th>
+                        <th style=" width: 10rem;">Số lượng</th>
+                        <th>Đơn giá</th>
+                        <th>Thành tiền</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="text-center">
+                                <img src="../images/spmoi_1.jpg" alt="spmoiw" style="width: 15rem;">
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <h6>Giường ngủ gỗ đẹp</h6>
+                                <a href="#" class="text-dark" style="text-decoration: none;">xoá</a>
+                            </div>
+                        </td>
+                        <td >
+                            <div class="d-flex align-items-center" style="margin-left: 0.5rem;">
+                                <button type="button" class="btn bg-white border border-dark">-</button>
+                                <input type="text" value="1" size="1" style="height: 2.3rem; text-align: center;">
+                                <button type="button" class="btn bg-white border border-dark">+</button>
+                            </div>
+                        </td>
+                        <td class="text-center">
+                            <p>15.999.000 VNĐ</p>
+                        </td>
+                        <td class="text-center">
+                            <p>15.999.000 VNĐ</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" style="background-color: #e1e1e1;">
+                            <p class="float-right">Tổng tiền: 15.999.000 VNĐ</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">
+                            <div>
+                                <button type="button" class="btn bg-dark text-white">TIẾP TỤC MUA HÀNG</button>
+                                <button type="button" class="btn bg-dark text-white">THỰC HIỆN THANH TOÁN </button>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
 
-
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+<footer class="col-md-12" style="background-color:#5d2a2e;color: black; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 18px; margin-top: 20px">
+    <div class="col-md-12" style="margin-top:20px">
+        <b>
+        <p>Nhóm 07</p>
+        <p>Hotline: 19002812</p>
+        <p>Email: nhom07@gmail.com</p>
+        <p>Địa chỉ: 12 Nguyễn Văn Bảo - Phường 4 - Quận Gò Vấp - TP.HCM</p>
+        <div class="list-icon" style="font-size: 30px; border-radius: 1px solid;">
+            <i class="fa fa-facebook-official"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-google"></i>
+            <i class="fa fa-twitter"></i>
+        </div>
+        <p>Copyright 2023 © Thiết kế Website bởi: Nhóm 07</p>
+        <br>
+    </b>
+    </div>
+</footer>
 </html>
